# parallel-inpainting

./: .gitignore  CMakeLists.txt  INDEX.md  README.md  _config.yaml  index.html
include/: cuda_helpers.cuh  cuda_helpers.h  inpaint.h  nnf.h
include/cuda/: cuda_buffers.h  cuda_helpers.cuh  nnf_cuda.h
include/patchmatch/: inpaint.h  masked_image.h  nnf.h
src/: README.MD  cuda.cpp  cuda_helpers.cu  inpaint.cpp  main.cpp  masked_image.cpp  nnf.cpp  nnf.cu
src/app/: index.html  main.cpp  server.py
src/cuda/: cuda.cpp  cuda_helpers.cu  nnf_kernels.cu
src/patchmatch/: inpaint.cpp  masked_image.cpp  nnf.cpp
